--- a/PhotoZap/Base.lproj/Main.storyboard
+++ b/PhotoZap/Base.lproj/Main.storyboard
@@ -157,7 +157,7 @@
             </objects>
             <point key="canvasLocation" x="-1058" y="1564"/>
         </scene>
-        <!--Send Photos-->
+        <!--Home-->
         <scene sceneID="xIY-eX-EhH">
             <objects>
                 <viewController id="StI-Ir-0gR" customClass="AlbumViewController" customModule="PhotoZap" customModuleProvider="target" sceneMemberID="viewController">
@@ -227,11 +227,30 @@
                             </mask>
                         </variation>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Send Photos" image="Album" id="OUe-e8-is0"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="Home" id="OUe-e8-is0"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wq6-uh-y66" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="164" y="1579"/>
+        </scene>
+        <!--Notifications-->
+        <scene sceneID="frL-10-KWj">
+            <objects>
+                <viewController id="zAI-6q-dtg" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="QmD-Xj-tVL"/>
+                        <viewControllerLayoutGuide type="bottom" id="RvA-ET-NdS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Rmz-rq-B42">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Notifications" image="Camera" id="Q5W-z0-ICd"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cGB-Fc-Wee" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="876" y="1584"/>
         </scene>
         <!--Searching-->
         <scene sceneID="ySe-P6-w96">
@@ -342,7 +361,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="StI-Ir-0gR" kind="relationship" relationship="viewControllers" id="2MX-95-JSW"/>
-                        <segue destination="1Nq-mg-DUW" kind="relationship" relationship="viewControllers" id="gZJ-ba-Ph6"/>
+                        <segue destination="zAI-6q-dtg" kind="relationship" relationship="viewControllers" id="P5o-F1-k6d"/>
                         <segue destination="TUf-Br-kU1" kind="relationship" relationship="viewControllers" id="oh3-qR-FVF"/>
                         <segue destination="yvR-dN-MUW" kind="relationship" relationship="viewControllers" id="anZ-ko-LcO"/>
                     </connections>
@@ -690,25 +709,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jgH-dB-7g3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1205" y="3140"/>
-        </scene>
-        <!--Zap-->
-        <scene sceneID="HEd-4x-6h6">
-            <objects>
-                <viewController id="1Nq-mg-DUW" customClass="ZapViewController" customModule="PhotoZap" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="cyA-d4-bV5"/>
-                        <viewControllerLayoutGuide type="bottom" id="E16-5i-DkJ"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="ubX-0R-mMA">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Zap" image="Camera" id="LZ6-4d-idu"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4df-eW-MVl" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1095" y="1572"/>
         </scene>
         <!--Friends-->
         <scene sceneID="IHl-SH-aTN">
